Changes for 1.6.1.1
* Making sure technology still has an effect even if it is not in a player's tech frontier. (veqryn)

* Make sure the game chooser menu is cleared from memory after closed. (veqryn)

* Created method to maintain savegame compatibility between 1.6.1 and 1.6.1.1 with regards to techs. (veqryn)

* Removing static instances of all hardcoded Technologies. Everything now done with locally created instances per game data. (veqryn)

* Changed choose how "best dice roll" / "LHTR heavy bombers" works with Low Luck on, so that it will add a bonus equal to the number of dice sides divided by 6. (veqryn)

* Fixing scrambling again, so that even an amphibious assault on an undefended (blitzable) land territory, from an undefended sea zone, will still trigger scrambling. (veqryn)

* Removed game stopping message about unlimited purchases, whenever a unit or item cost so little that you can buy more than 10000 of it. (veqryn)

* Fixed errors in build.xml for java included version and mac version. (veqryn)

* Fixed null pointer error in Dynamix AI. (veqryn)

* Fixed bug in freePlacementCapacity when placing land units in a territory that previously placed sea units in a sea zone bordering more than one land producer. (veqryn)

* Increasing max memory from 512mb to 640mb, and up to 768mb for online games. (veqryn)


Changes for 1.6.1
* Rewriting build file and including META-INF, hopefully fixing issue with Gmail play-by-email emailer on linux machines. (rain)

* Changing trigger property changes to use "-reset-" instead of clear. Can now be used with any attachment option. (veqryn)

* Creating a reset method for every single attachment property. These can now be used to return a property to its default value. (veqryn)

* Fixing some bugs introduced into AI with the factory switch. (veqryn)

* Fixing null pointer error in Easy AI purchasing algorithm for getting costs of units. (veqryn)
